fix: app-bar-z-index

--- a/src/components/cyan-top-app-bar/theme.sass
+++ b/src/components/cyan-top-app-bar/theme.sass
@@ -10,5 +10,5 @@
   --cyan-color-top-app-bar: var(--chroma-secondary-g)
   --cyan-background-top-app-bar: var(--chroma-secondary-a)
   --cyan-background-top-app-bar-sticky: var(--chroma-secondary-b)
-  --cyan-box-shadow-top-app-bar-overlay: 0px 0px 72px -14px rgba(0,0,0,0.3)
+  --cyan-box-shadow-top-app-bar-overlay: 0px 0px 36px 0px rgba(0, 0, 0, 0.77)
   
